--- a/index.html
+++ b/index.html
@@ -12,19 +12,32 @@
   </head>
   <body>
 
+  	<nav class="navbar navbar-default navbar-light bg-faded"">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#">WebSiteName</a>
+	    </div>
+	    <!-- <ul class="nav navbar-nav">
+	      <li class="active"><a href="#">Home</a></li>
+	      <li><a href="#">Page 1</a></li>
+	      <li><a href="#">Page 2</a></li>
+	    </ul>
+	    <ul class="nav navbar-nav navbar-right">
+	      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+	      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+	    </ul> -->
+	    <div class="navbar-nav">
+	      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+	      <a class="nav-item nav-link" href="#">Learn More</a>
+	      <a class="nav-item nav-link" href="#">Sign Up</a>
+	    </div>
+	  </div>
+	</nav>
+
 
   	<div class="jumbotron">
   		<img class="img-responsive" src="imgs/home-tato.jpg" alt="home potato">
-	  <!-- <h1>Bootstrap Tutorial</h1> 
-	  <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive,
-	  mobile-first projects on the web.</p>  -->
 	</div>
-
-	<div class="image-holder">
-		<!-- <img class="img-responsive" src="imgs/home-tato.jpg" alt="home potato"> -->
-	</div>
-
-
 
 
     <h1>Hello, world!</h1>
