first form and icon

--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
   </head>
   <body>
 
+
+<!-- NAVIGATION -->
   	<nav class="navbar navbar-default navbar-light bg-faded"">
 	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#">WebSiteName</a>
-	    </div>
+	    <!-- <div class="navbar-header"> -->
+	    	<a class="navbar-brand" href="#">
+			    <img src="imgs/icon.png" width="30" height="30" class="d-inline-block align-top" alt="ICON">
+			    Potatos
+			  </a>
+	      <!-- <a class="navbar-brand" href="#">WebSiteName</a> -->
+	    <!-- </div> -->
 	    <!-- <ul class="nav navbar-nav">
 	      <li class="active"><a href="#">Home</a></li>
 	      <li><a href="#">Page 1</a></li>
@@ -51,7 +57,13 @@
 	      <p>Lorem ipsum dolor sit amet, sagittis eget tristique amet congue mauris, mauris odio ipsum aenean donec duis venenatis. Tempore risus error faucibus id volutpat, ante arcu donec eros sed penatibus conubia, amet ac eget phasellus gravida ac, eu mauris, mattis mauris nullam arcu vivamus suspendisse adipiscing. Vel per elit nec turpis, non mi est, nam et ultricies enim. Ac in fusce excepturi metus quis, mi nonummy consequat porttitor eros posuere aliquam, explicabo ridiculus iusto dictumst nulla vulputate lobortis. Bibendum lectus volutpat vitae, felis ante maecenas quam pharetra et malesuada, quia est consequat ligula ornare ante neque, rutrum augue faucibus senectus diam elit sit.Lorem ipsum dolor sit amet, sagittis eget tristique amet congue mauris, mauris odio ipsum aenean donec duis venenatis. Tempore risus error faucibus id volutpat, ante arcu donec eros sed penatibus conubia, amet ac eget phasellus gravida ac, eu mauris, mattis mauris nullam arcu vivamus suspendisse adipiscing. Vel per elit nec turpis, non mi est, nam et ultricies enim. Ac in fusce excepturi metus quis, mi nonummy consequat porttitor eros posuere aliquam, explicabo ridiculus iusto dictumst nulla vulputate lobortis. Bibendum lectus volutpat vitae, felis ante maecenas quam pharetra et malesuada, quia est consequat ligula ornare ante neque, rutrum augue faucibus senectus diam elit sit.Lorem ipsum dolor sit amet, sagittis eget tristique amet congue mauris, mauris odio ipsum aenean donec duis venenatis. Tempore risus error faucibus id volutpat, ante arcu donec eros sed penatibus conubia, amet ac eget phasellus gravida ac, eu mauris, mattis mauris nullam arcu vivamus suspendisse adipiscing. Vel per elit nec turpis, non mi est, nam et ultricies enim. Ac in fusce excepturi metus quis, mi nonummy consequat porttitor eros posuere aliquam, explicabo ridiculus iusto dictumst nulla vulputate lobortis. Bibendum lectus volutpat vitae, felis ante maecenas quam pharetra et malesuada, quia est consequat ligula ornare ante neque, rutrum augue faucibus senectus diam elit sit.</p>
 	    </div>
 	    <div class="col-sm">
-	      <p>Lorem ipsum dolor sit amet, sagittis eget tristique amet congue mauris, mauris odio ipsum aenean donec duis venenatis. Tempore risus error faucibus id volutpat, ante arcu donec eros sed penatibus conubia, amet ac eget phasellus gravida ac, eu mauris, mattis mauris nullam arcu vivamus suspendisse adipiscing. Vel per elit nec turpis, non mi est, nam et ultricies enim. Ac in fusce excepturi metus quis, mi nonummy consequat porttitor eros posuere aliquam, explicabo ridiculus iusto dictumst nulla vulputate lobortis. Bibendum lectus volutpat vitae, felis ante maecenas quam pharetra et malesuada, quia est consequat ligula ornare ante neque, rutrum augue faucibus senectus diam elit sit.Lorem ipsum dolor sit amet, sagittis eget tristique amet congue mauris, mauris odio ipsum aenean donec duis venenatis. Tempore risus error faucibus id volutpat, ante arcu donec eros sed penatibus conubia, amet ac eget phasellus gravida ac, eu mauris, mattis mauris nullam arcu vivamus suspendisse adipiscing. Vel per elit nec turpis, non mi est, nam et ultricies enim. Ac in fusce excepturi metus quis, mi nonummy consequat porttitor eros posuere aliquam, explicabo ridiculus iusto dictumst nulla vulputate lobortis. Bibendum lectus volutpat vitae, felis ante maecenas quam pharetra et malesuada, quia est consequat ligula ornare ante neque, rutrum augue faucibus senectus diam elit sit.Lorem ipsum dolor sit amet, sagittis eget tristique amet congue mauris, mauris odio ipsum aenean donec duis venenatis. Tempore risus error faucibus id volutpat, ante arcu donec eros sed penatibus conubia, amet ac eget phasellus gravida ac, eu mauris, mattis mauris nullam arcu vivamus suspendisse adipiscing. Vel per elit nec turpis, non mi est, nam et ultricies enim. Ac in fusce excepturi metus quis, mi nonummy consequat porttitor eros posuere aliquam, explicabo ridiculus iusto dictumst nulla vulputate lobortis. Bibendum lectus volutpat vitae, felis ante maecenas quam pharetra et malesuada, quia est consequat ligula ornare ante neque, rutrum augue faucibus senectus diam elit sit.</p>
+	      <form action="/action_page.php">
+			  <div class="form-group">
+			    <label for="email">Email address:</label>
+			    <input type="email" class="form-control" id="email">
+			  </div>
+			  <button type="submit" class="btn btn-default">Submit</button>
+			</form>
 	    </div>
 	  </div>
 	</div>
