--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
 	    <div class="col-sm">
 	      <div class="card">
 			  <div class="card-body">
-			    <h5 class="card-title">Card title</h5>
-			    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-			    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+			    <h5 class="card-title">Your Favorite Starch</h5>
+			    <p class="card-text">The potato is a starchy, tuberous crop from the perennial nightshade Solanum tuberosum. Potato may be applied to both the plant and the edible tuber. Potatoes have become a staple food in many parts of the world and an integral part of much of the world's food supply. Potatoes are the world's fourth-largest food crop, following corn, wheat, and rice.</p>
 			    <a href="#" class="card-link">Card link</a>
 			    <a href="#" class="card-link">Another link</a>
 			  </div>
