more small changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,34 @@
   </head>
   <body>
 
-  	<?php include "includes/nav.php"; ?>
+
+<!-- NAVIGATION -->
+  	<nav class="navbar navbar-default navbar-light bg-faded"">
+	  <div class="container-fluid">
+	    <!-- <div class="navbar-header"> -->
+	    	<a class="navbar-brand" href="#">
+			    <img src="imgs/icon.png" width="30" height="30" class="d-inline-block align-top" alt="ICON">
+			    Potatos
+			  </a>
+	      <!-- <a class="navbar-brand" href="#">WebSiteName</a> -->
+	    <!-- </div> -->
+	    <!-- <ul class="nav navbar-nav">
+	      <li class="active"><a href="#">Home</a></li>
+	      <li><a href="#">Page 1</a></li>
+	      <li><a href="#">Page 2</a></li>
+	    </ul>
+	    <ul class="nav navbar-nav navbar-right">
+	      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+	      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+	    </ul> -->
+	    <div class="navbar-nav">
+	      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+	      <a class="nav-item nav-link" href="#">Learn More</a>
+	      <a class="nav-item nav-link" href="#">Sign Up</a>
+	    </div>
+	  </div>
+	</nav>
+
 
   	<div class="jumbotron">
   		<img class="img-responsive" src="imgs/home-tato.jpg" alt="home potato">
@@ -38,7 +65,7 @@
 			  <div class="card-body">
 			    <h5 class="card-title">Your Favorite Starch</h5>
 			    <p class="card-text">The potato is a starchy, tuberous crop from the perennial nightshade Solanum tuberosum. Potato may be applied to both the plant and the edible tuber. Potatoes have become a staple food in many parts of the world and an integral part of much of the world's food supply. Potatoes are the world's fourth-largest food crop, following corn, wheat, and rice.</p>
-			    <a href="content.php" class="btn btn-primary">Learn More</a>
+			    <a href="content.html" class="btn btn-primary">Learn More</a>
 			  </div>
 			</div>
 	    </div>
